front end changes

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -8,6 +8,7 @@
 
 @import "bootstrap";
 @import "bootstrap-responsive";
+@import 'font-awesome';
 
 /* FullCalendar fc-button themed using Twitter Bootstrap. */
 
