--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -1,3 +1,7 @@
+@import "bootstrap";
+@import "bootstrap-responsive";
+@import 'font-awesome';
+
 .offering {
 	margin:20px 0px;
 	padding:10px;
@@ -14,5 +18,12 @@
 		margin: 0;
 		padding: 0;
 		float: left;
+	}
+}
+
+.events_list {
+	img {
+		float:left;
+		margin-right: 10px;
 	}
 }
