--- a/app/views/scheduler/reports/course_analysis.html.erb
+++ b/app/views/scheduler/reports/course_analysis.html.erb
@@ -6,8 +6,8 @@
 	    <strong>Filter by:</strong> 
 	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(@teachers.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => teacher), :include_blank => current_admin.admin?, :class => "span2" %>
 	    &nbsp; Client: <%= select_tag :client, options_for_select(ClientGroup.all.collect { |client| [client.title, client.id] }, :selected => params[:client]), :include_blank => true, :class => "span2" %>
-	    &nbsp; Start Date: <%= text_field_tag :start_date, params[:start_date], :class => "datepicker", :style => 'width:75px;' %>
-	    &nbsp; End Date: <%= text_field_tag :end_date, end_date, :class => "datepicker", :style => 'width:75px;' %>
+	    &nbsp; Start Date: <%= text_field_tag :start_date, start_date, :class => "datepicker", :style => 'width:75px;' %>
+	    &nbsp; End Date: <%= text_field_tag :end_date, params[:end_date], :class => "datepicker", :style => 'width:75px;' %>
 	    <hr>
 		<%= hidden_field_tag :direction, params[:direction] %>
 		<%= hidden_field_tag :sort, params[:sort] %>
@@ -30,7 +30,8 @@
 	  <th><%= sortable "start_date", "Start Date" %></th>
 	  <th><%= sortable "end_date", "End Date" %></th>
 	  <th><%= sortable "admins.id", "Teacher" %></th>
-	  <th style="text-align:right;">Registrations</th>
+	  <th>Payment Type</th>
+	  <th style="text-align:right;"># Registrations</th>
 	  <th style="text-align:right;">Gross</th>
 	  <th style="text-align:right;">Payout</th>
 	  <th style="text-align:right;">Net</th>
@@ -40,15 +41,19 @@
 <tbody>
     <% @courses.each do |course| %>
     <tr>
-        <td><span class="label">ID: <%= course.id %></span></td>
+        <td><%= link_to raw("ID: #{course.id}"), "/admin/course/#{course.id}/edit", :target => "_blank", :class => "btn btn-mini"%></td>
         <td><%= course.client_group.title %></td>
         <td><%= course.start_date.strftime('%m/%d/%Y') %></td>
         <td><%= course.end_date.strftime('%m/%d/%Y') %></td>
         
-        <td><%= content_tag :span, course.teacher.first_name, :class => "label", :style => "background-color:##{course.teacher.color};color:black;" %></td>
-        <td style="text-align:right;"><%= course.course_registrations.length %></td>
+        <td><%= content_tag :span, course.teacher.first_name, :class => "label btn-block", :style => "background-color:##{course.teacher.color};color:black;" %></td>
+        <td><%= content_tag :span, "Paid by Company", :class => "label btn-block" if course.is_paid_by_company? %>
+            <%= content_tag :span, "Paid by Registrations", :class => "label label-info btn-block" if !course.is_paid_by_company? %></td>
+        <td style="text-align:right;"><%= content_tag :b, course.course_registrations.length, :class => course.course_registrations.length == 0 ? "text-error" : "text-success" %><%=  %></td>
         <td style="text-align:right;"><%= number_to_currency(course.total_collected) %></td>
+        
         <td style="text-align:right;"><%= number_to_currency(course.total_pay_out) %></td>
+        
         <td style="text-align:right;"><%= content_tag :b, number_to_currency(course.net), :class => course.net < 0 ? "text-error" : "text-success" %></td>
     </tr>    
     <% end %>
