--- a/app/views/scheduler/courses/index.html.erb
+++ b/app/views/scheduler/courses/index.html.erb
@@ -7,16 +7,17 @@
 
 <ul class="nav nav-tabs">
 	<li class="active"><%= link_to raw("<i class='icon-th-list'></i> List"), scheduler_courses_path %></li>
-	<li class="active"><%= link_to raw("<i class='icon-th-list'></i> Unscheduled"), unscheduled_scheduler_courses_path %></li>
+	<li><%= link_to raw("<i class='icon-th-list'></i> Unscheduled"), unscheduled_scheduler_courses_path %></li>
 </ul>
 
 <%= form_tag scheduler_courses_path, :method => 'get', :class => 'form-inline' do %>
 	<div class="well">
 	    <strong>Filter by:</strong> 
-	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(@teachers.collect { |teacher| [teacher.full_name, teacher.id] }, :selected => teacher), :include_blank => current_admin.admin?, :class => "span2" %>
-	    &nbsp; Client: <%= select_tag :client, options_for_select(ClientGroup.all.collect { |client| [client.title, client.id] }, :selected => params[:client]), :include_blank => true, :class => "span2" %>
-	    &nbsp; Start Date: <%= text_field_tag :start_date, params[:start_date], :class => "datepicker", :style => 'width:75px;' %>
-	    &nbsp; End Date: <%= text_field_tag :end_date, end_date, :class => "datepicker", :style => 'width:75px;' %>
+	    &nbsp; Teacher: <%= select_tag :teacher, options_for_select(@teachers.order(:first_name).collect { |teacher| [teacher.full_name, teacher.id] }, :selected => teacher), :include_blank => current_admin.admin?, :class => "span2" %>
+	    &nbsp; Client: <%= select_tag :client, options_for_select(ClientGroup.order(:title).collect { |client| [client.title, client.id] }, :selected => params[:client]), :include_blank => true, :class => "span2" %>
+	    &nbsp; Start Date: <%= text_field_tag :start_date, start_date, :class => "datepicker", :style => 'width:75px;' %>
+	    &nbsp; End Date: <%= text_field_tag :end_date, params[:end_date], :class => "datepicker", :style => 'width:75px;' %>
+	    
 	    <hr>
 		<%= hidden_field_tag :direction, params[:direction] %>
 		<%= hidden_field_tag :sort, params[:sort] %>
@@ -39,6 +40,7 @@
 	  <th><%= sortable "end_date", "End Date" %></th>
 	  <th><%= sortable "client_groups.title", "Client Group" %></th>
 	  <th><%= sortable "admins.id", "Teacher" %></th>
+		<th style="text-align:right;">Registrations</th>
 	  <th></th>
 	</tr>	
 </thead>
@@ -46,12 +48,13 @@
 <tbody>
     <% @courses.each do |course| %>
     <tr>
-        <td><span class="label">ID: <%= course.id %></span> <%= "#{course.default_title}" %></td>
+        <td><%= link_to raw("ID: #{course.id}"), "/admin/course/#{course.id}/edit", :target => "_blank", :class => "btn btn-mini"%> <%= "#{course.default_title}" %></td>
         <td><%= course.start_date.strftime('%m/%d/%Y') %></td>
         <td><%= course.end_date.strftime('%m/%d/%Y') %></td>
         <td><%= course.client_group.title %></td>
-        <td><%= content_tag :span, course.teacher.full_name, :class => "label", :style => "background-color:##{course.teacher.color};color:black;" %></td>
-        <td nowrap><%= link_to raw("<i class='icon-edit'></i> Schedule"), edit_scheduler_course_path(course), :class => "btn btn-small" if current_admin.admin? %></td>
+        <td><%= content_tag :span, course.teacher.full_name, :class => "label btn-block", :style => "background-color:##{course.teacher.color};color:black;" %></td>
+				<td style="text-align:right;"><%= content_tag :b, course.course_registrations.length, :class => course.course_registrations.length == 0 ? "text-error" : "text-success" %><%=  %></td>
+        <td nowrap><%= link_to raw("<i class='icon-calendar'></i> Schedule"), edit_scheduler_course_path(course), :class => "btn btn-small" if current_admin.admin? %></td>
     </tr>    
     <% end %>
 </tbody>    
