--- a/app/views/scheduler/course_events/show.html.erb
+++ b/app/views/scheduler/course_events/show.html.erb
@@ -28,6 +28,7 @@
     <thead>
         <tr>
             <th>Registrant</th>
+						<th>Email</th>
             <th>Registration Type</th>
             <th>Paid</th>
             <th>Attended</th>
