--- a/app/views/carts/_line_items.html.erb
+++ b/app/views/carts/_line_items.html.erb
@@ -17,7 +17,7 @@
         <td style="text-align:right;"><%= number_to_currency(line_item.object.line_itemable.price) %></td>
         <td style="text-align:center;"><%= line_item.object.line_itemable_type == "Course" ? "1" : line_item.text_field(:qty, :style => "width: 20px;") %></td>
         <td style="text-align:right;"><%= number_to_currency(line_item.object.line_itemable.price * line_item.object.qty) %></td>
-        <td><%= line_item.check_box :_destroy %>
+        <td><%= line_item.check_box :_destroy %></td>
       </tr>  
     <% end %>
     
@@ -27,7 +27,7 @@
         <td style="text-align:right;"></td>
         <td style="text-align:center;"></td>
         <td style="text-align:right;" nowrap>- <%= number_to_currency(promo.object.amount) %></td>
-        <td><%= promo.check_box :_destroy %>
+        <td><%= promo.check_box :_destroy %></td>
       </tr>  
     <% end %>
     
