--- a/app/views/scheduler/course_events/_attendee.html.erb
+++ b/app/views/scheduler/course_events/_attendee.html.erb
@@ -4,7 +4,7 @@
     <%= f.select :payment_type, options_for_select(['cash', 'check'], :selected => f.object.payment_type), {}, :class => "span2" %>
 <% else%>
     <% registration = @course_event.course_registrations.find_by_user_id(f.object.attendable.id) %>
-    <%= number_to_currency(registration.paid / @course_event.course.course_events.length) if !registration.nil? %>
+    <%= number_to_currency(registration.paid / @course_event.course.course_events.length) if !registration.nil? && current_admin.admin? %>
 <% end %>
 
 
