--- a/app/views/scheduler/pay_outs/show.html.erb
+++ b/app/views/scheduler/pay_outs/show.html.erb
@@ -103,6 +103,9 @@
 
 
 <div class="form-actions">
+	<%= f.label :comment, :class => "control-label" %><br>
+	<%= f.text_area :comment, :rows => "5", :class => "span6" %>
+	<br><br>
     <%= f.submit :class => "btn btn-primary"%>
 </div> 
 
