--- a/app/views/scheduler/course_events/walkin.html.erb
+++ b/app/views/scheduler/course_events/walkin.html.erb
@@ -23,7 +23,7 @@
         <div class="control-group">
             <%= attendance.label :payment_type, :class => "control-label" %>
             <div class="controls">
-                <%= attendance.select :payment_type, options_for_select(['cash', 'check']), {}, :class => "span2" %>
+                <%= attendance.select :payment_type, options_for_select(['cash', 'check', 'paypal']), {}, :class => "span2" %>
             </div>
         </div>     
         
