updates to time formats, class starts, course updates

--- a/app/views/layouts/admin/_nav.html.erb
+++ b/app/views/layouts/admin/_nav.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand logo" href="#">Belightful Yoga <strong>Scheduler</strong></a>
+      <a class="brand logo" href="#">Belightful Yoga <strong>Calendar</strong></a>
       <div class="container-fluid nav-collapse">
 
 		<ul class="nav pull-right">
