--- a/app/views/scheduler/course_events/registration_user.html.erb
+++ b/app/views/scheduler/course_events/registration_user.html.erb
@@ -1,9 +1,9 @@
-<div class="page-header"><%= content_tag :h1, "Add Registration to '#{@course_event.event_date.strftime('%m/%d/%Y %I:%M%p')}'" %></div>
+<div class="page-header"><%= content_tag :h1, "Add Registration to '#{@course_event.event_date.strftime('%m/%d/%Y %l:%M%p')}'" %></div>
 
 <ul class="breadcrumb">
 	<li><%= link_to "Dashboard", scheduler_root_path %> <span class="divider">/</span></li>
 	<li><%= link_to "Class Lists", scheduler_course_events_path %> <span class="divider">/</span></li>
-	<li><%= link_to "#{@course_event.event_date.strftime('%m/%d/%Y %I:%M%p')}", [:scheduler, @course_event] %> <span class="divider">/</span></li>
+	<li><%= link_to "#{@course_event.event_date.strftime('%m/%d/%Y %l:%M%p')}", [:scheduler, @course_event] %> <span class="divider">/</span></li>
 	<li>Registration (invite new user)</li>
 </ul>
 
