--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -9,7 +9,7 @@
 	    <dt>End date:</dt>
    	    <dd><%= course.end_date.strftime('%m/%d/%Y') %></dd>
 	    <dt>Time:</dt>
-   	    <dd><%= "#{course.day.pluralize}" %><br><%= "#{course.start_time.strftime('%I:%M%p')} - #{course.end_time.strftime('%I:%M%p')}" %></dd>
+   	    <dd><%= "#{course.day.pluralize}" %><br><%= "#{course.start_time.strftime('%l:%M%p')} - #{course.end_time.strftime('%l:%M%p')}" %></dd>
    	    <dt>Location/Room:</dt>
    	    <dd><%= simple_format(course.location) %></dd>
 	    <dt>Price:</dt>
