--- a/app/views/courses/registered_courses.html.erb
+++ b/app/views/courses/registered_courses.html.erb
@@ -15,7 +15,7 @@
         <% @courses.each do |course| %>
         <tr>
             <td><%= course.line_item_title %></td>
-            <td><%= "#{course.day.pluralize}" %><br><%= "#{course.start_time.strftime('%I:%M%p')} - #{course.end_time.strftime('%I:%M%p')}" %></td>
+            <td><%= "#{course.day.pluralize}" %><br><%= "#{course.start_time.strftime('%l:%M%p')} - #{course.end_time.strftime('%l:%M%p')}" %></td>
             <td><%= course.location %></td>
             <td><%= link_to raw("<i class='icon-calendar'></i> Add To Calendar"), ics_course_path(course), :class => "btn" %></td>
         </tr>    
