--- a/app/views/scheduler/course_events/_member_header.html.erb
+++ b/app/views/scheduler/course_events/_member_header.html.erb
@@ -1,7 +1,7 @@
 <ul class="breadcrumb">
 	<li><%= link_to "Dashboard", scheduler_root_path %> <span class="divider">/</span></li>
 	<li><%= link_to "Class Lists", scheduler_course_events_path %> <span class="divider">/</span></li>
-	<li><%= "#{@course_event.event_date.strftime('%m/%d/%Y %I:%M%p')}" %> <span class="divider">/</span></li>
+	<li><%= "#{@course_event.event_date.strftime('%m/%d/%Y %l:%M%p')}" %> <span class="divider">/</span></li>
 	<li><%= section.titleize %></li>
 </ul>
 
