--- a/app/views/scheduler/course_events/accounting.html.erb
+++ b/app/views/scheduler/course_events/accounting.html.erb
@@ -1,4 +1,4 @@
-<div class="page-header"><%= content_tag :h1, "Class Acounting '#{@course_event.event_date.strftime('%m/%d/%Y %I:%M%p')}'" %></div>
+<div class="page-header"><%= content_tag :h1, "Class Acounting '#{@course_event.event_date.strftime('%m/%d/%Y %l:%M%p')}'" %></div>
 
 <%= render 'member_header', section: "accounting" %>
 
