--- a/app/views/scheduler/course_events/pay_outs.html.erb
+++ b/app/views/scheduler/course_events/pay_outs.html.erb
@@ -51,7 +51,7 @@
 	<tr>
 	    <td><%= check_box_tag "course_event_ids[]", course_event.id %></td>
 		<td><%= course_event.event_date.strftime('%m/%d/%Y') %></td>
-		<td><%= course_event.event_date.strftime('%I:%M%p') %></td>
+		<td><%= course_event.event_date.strftime('%l:%M%p') %></td>
 		<td><%= course_event.course.client_group.title %></td>
 		<td><%= content_tag :span, course_event.teacher.full_name, :class => "label", :style => "background-color:##{course_event.teacher.color};color:black;" %></td>
 		<td><span class="label">ID: <%= course_event.course.id %></span> <%= "#{course_event.course.default_title}" %>
