--- a/app/views/teacher_mailer/payout_notification.html.erb
+++ b/app/views/teacher_mailer/payout_notification.html.erb
@@ -1,11 +1,10 @@
 <%= content_tag :h1, "Belightful Yoga Teacher Payout Notification" %>
 <p>
-A payout has been created for you in the Belightful Yoga Calendar system for the following dates:<br>
+A payout has been created for you in the Belightful Yoga Calendar system for the following period:<br>
 <strong><%= "#{@payout.start_date.strftime('%m/%d/%Y')} - #{@payout.end_date.strftime('%m/%d/%Y')}"%></strong>
 </p>
-
-<p>
-	Checks are sent out by the following Friday or Saturday.  Beforehand, please login to review the details of this pay out, make note of any adjustments needed, and/or verify that the information recorded is accurate.  
+<p>You verification (checking the approval box) is needed by the end of the payout period.</p>
+<p>Please login to review the details, ensure all class attendance is complete and confirm the information is accurate.  If necessary, make note of any adjustments needed in the "comments" box.  
 </p>
 	
 	<%= link_to "Click Here to Review Your Payout", scheduler_pay_out_url(@payout), :class => "btn btn-large" %>
